; ModuleID = '/home/carl/AnghaBench/freebsd/sbin/ifconfig/extr_ifpfsync.c_unsetpfsync_syncpeer.c'
source_filename = "/home/carl/AnghaBench/freebsd/sbin/ifconfig/extr_ifpfsync.c_unsetpfsync_syncpeer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i64 }
%struct.afswtch = type { i32 }
%struct.pfsyncreq = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i64 }

@ifr = common dso_local global %struct.TYPE_4__ zeroinitializer, align 8
@SIOCGETPFSYNC = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [14 x i8] c"SIOCGETPFSYNC\00", align 1
@SIOCSETPFSYNC = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [14 x i8] c"SIOCSETPFSYNC\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @unsetpfsync_syncpeer(i8* %0, i32 %1, i32 %2, %struct.afswtch* %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca %struct.afswtch*, align 8
  %9 = alloca %struct.pfsyncreq, align 8
  store i8* %0, i8** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store %struct.afswtch* %3, %struct.afswtch** %8, align 8
  %10 = bitcast %struct.pfsyncreq* %9 to i8*
  %11 = call i32 @bzero(i8* %10, i32 8)
  %12 = ptrtoint %struct.pfsyncreq* %9 to i64
  store i64 %12, i64* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @ifr, i32 0, i32 0), align 8
  %13 = load i32, i32* %7, align 4
  %14 = load i32, i32* @SIOCGETPFSYNC, align 4
  %15 = call i32 @ioctl(i32 %13, i32 %14, i64 ptrtoint (%struct.TYPE_4__* @ifr to i64))
  %16 = icmp eq i32 %15, -1
  br i1 %16, label %17, label %19

17:                                               ; preds = %4
  %18 = call i32 @err(i32 1, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0))
  br label %19

19:                                               ; preds = %17, %4
  %20 = getelementptr inbounds %struct.pfsyncreq, %struct.pfsyncreq* %9, i32 0, i32 0
  %21 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %20, i32 0, i32 0
  store i64 0, i64* %21, align 8
  %22 = load i32, i32* %7, align 4
  %23 = load i32, i32* @SIOCSETPFSYNC, align 4
  %24 = call i32 @ioctl(i32 %22, i32 %23, i64 ptrtoint (%struct.TYPE_4__* @ifr to i64))
  %25 = icmp eq i32 %24, -1
  br i1 %25, label %26, label %28

26:                                               ; preds = %19
  %27 = call i32 @err(i32 1, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.1, i64 0, i64 0))
  br label %28

28:                                               ; preds = %26, %19
  ret void
}

declare dso_local i32 @bzero(i8*, i32) #1

declare dso_local i32 @ioctl(i32, i32, i64) #1

declare dso_local i32 @err(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
